--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <img class="avatar" src="images/LDSZ.png" alt="LDSZ image">
         <h1>LDSZ Consulting</h1>
         <p class="role">&#x2022; Diligências judiciais</p>
-        <p class="role">&#x2022; Acompanhamento Judicial</p>
+        <p class="role">&#x2022; Acompanhamento Processual</p>
         <p class="role">&#x2022; Defesas Administrativas</p> 
         <p class="role">&#x2022; Pareceres Jurídicos</p> 
         <p class="role">&#x2022; Petições & Recursos</p> 
